--- a/Reports/barcode_print.jrxml
+++ b/Reports/barcode_print.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="barcode_print" language="groovy" pageWidth="269" pageHeight="198" orientation="Landscape" columnWidth="229" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="28">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="barcode_print" language="groovy" pageWidth="269" pageHeight="198" columnWidth="229" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="28">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -11,6 +11,7 @@
 	<field name="itemName" class="java.lang.String"/>
 	<field name="optdtlcode" class="java.lang.String"/>
 	<field name="brandName" class="java.lang.String"/>
+	<field name="tglcetak" class="java.sql.Timestamp"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -26,24 +27,35 @@
 	<detail>
 		<band height="92" splitType="Stretch">
 			<componentElement>
-				<reportElement mode="Opaque" x="0" y="31" width="229" height="42"/>
+				<reportElement mode="Opaque" x="0" y="38" width="229" height="35"/>
 				<jr:barbecue xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" type="Code128B" drawText="false" checksumRequired="false" barWidth="1" barHeight="1">
 					<jr:codeExpression><![CDATA[$F{itemcode}]]></jr:codeExpression>
 				</jr:barbecue>
 			</componentElement>
 			<textField>
 				<reportElement x="0" y="73" width="229" height="19"/>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{itemName}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="0" width="113" height="19"/>
+				<reportElement x="0" y="0" width="158" height="19"/>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{brandName}]]></textFieldExpression>
 			</textField>
+			<textField pattern="dd-MMM-yy">
+				<reportElement x="158" y="0" width="71" height="19"/>
+				<textElement textAlignment="Right">
+					<font isBold="false" isItalic="false"/>
+				</textElement>
+				<textFieldExpression class="java.sql.Timestamp"><![CDATA[$F{tglcetak}]]></textFieldExpression>
+			</textField>
 			<textField>
-				<reportElement x="114" y="0" width="115" height="19"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="1" y="19" width="228" height="19"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{itemcode}]]></textFieldExpression>
 			</textField>
 		</band>
