--- a/Reports/gtransfer_wms.jrxml
+++ b/Reports/gtransfer_wms.jrxml
@@ -60,7 +60,9 @@
 					<reportElement key="line" x="0" y="0" width="555" height="1" forecolor="#999999"/>
 				</line>
 				<textField pattern="#,##0" isBlankWhenNull="false">
-					<reportElement key="textField" x="484" y="1" width="71" height="15"/>
+					<reportElement key="textField" x="484" y="1" width="71" height="15">
+						<printWhenExpression><![CDATA[false]]></printWhenExpression>
+					</reportElement>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -73,7 +75,9 @@
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{quantity}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement key="staticText" x="125" y="1" width="359" height="15"/>
+					<reportElement key="staticText" x="125" y="1" width="359" height="15">
+						<printWhenExpression><![CDATA[false]]></printWhenExpression>
+					</reportElement>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -86,10 +90,12 @@
 					<text><![CDATA[Receipt Total  : ]]></text>
 				</staticText>
 				<line>
-					<reportElement key="line" x="0" y="15" width="555" height="1" forecolor="#999999"/>
+					<reportElement key="line" x="0" y="15" width="555" height="1" forecolor="#999999">
+						<printWhenExpression><![CDATA[false]]></printWhenExpression>
+					</reportElement>
 				</line>
 				<staticText>
-					<reportElement key="staticText" x="0" y="35" width="81" height="15"/>
+					<reportElement key="staticText" x="0" y="0" width="81" height="15"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -101,21 +107,8 @@
 					</textElement>
 					<text><![CDATA[Remark : ]]></text>
 				</staticText>
-				<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
-					<reportElement key="textField" x="81" y="20" width="322" height="15" isRemoveLineWhenBlank="true"/>
-					<box>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement verticalAlignment="Middle">
-						<font size="8" isBold="false"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{ref2}]]></textFieldExpression>
-				</textField>
 				<textField pattern="#,##0" isBlankWhenNull="true">
-					<reportElement key="textField" x="81" y="35" width="322" height="15"/>
+					<reportElement key="textField" x="81" y="1" width="322" height="15"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -127,19 +120,6 @@
 					</textElement>
 					<textFieldExpression class="java.lang.String"><![CDATA[$F{comments}]]></textFieldExpression>
 				</textField>
-				<staticText>
-					<reportElement key="staticText" x="0" y="20" width="81" height="15"/>
-					<box>
-						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					</box>
-					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font size="8"/>
-					</textElement>
-					<text><![CDATA[Reference : ]]></text>
-				</staticText>
 			</band>
 		</groupFooter>
 	</group>
@@ -188,7 +168,7 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<text><![CDATA[No.Dodument : ]]></text>
+				<text><![CDATA[No.Document : ]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField" x="440" y="15" width="115" height="15"/>
