--- a/Reports/good_issue.jrxml
+++ b/Reports/good_issue.jrxml
@@ -72,7 +72,7 @@
 			<band splitType="Stretch"/>
 		</groupHeader>
 		<groupFooter>
-			<band height="206" splitType="Stretch">
+			<band height="195" splitType="Stretch">
 				<staticText>
 					<reportElement key="staticText-12" x="120" y="10" width="134" height="21"/>
 					<box>
@@ -91,7 +91,7 @@
 					</graphicElement>
 				</line>
 				<line>
-					<reportElement key="line-5" x="0" y="37" width="552" height="1"/>
+					<reportElement key="line-5" x="0" y="31" width="552" height="1"/>
 					<graphicElement>
 						<pen lineWidth="1.0" lineStyle="Dotted"/>
 					</graphicElement>
@@ -173,6 +173,39 @@
 					<textElement textAlignment="Right"/>
 					<textFieldExpression class="java.lang.Double"><![CDATA[$V{SubTotUnt}]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement key="staticText-28" x="329" y="5" width="81" height="18"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Right" verticalAlignment="Top"/>
+					<text><![CDATA[Ket     :]]></text>
+				</staticText>
+				<textField isBlankWhenNull="false">
+					<reportElement key="textField" x="80" y="35" width="471" height="33"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement verticalAlignment="Top"/>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_comments}+" / "+$F{goodsreceipt_ref1}]]></textFieldExpression>
+				</textField>
+				<staticText>
+					<reportElement key="staticText-2" x="10" y="35" width="70" height="21"/>
+					<box>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement/>
+					<text><![CDATA[Comments   :]]></text>
+				</staticText>
 			</band>
 		</groupFooter>
 	</group>
@@ -193,7 +226,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement/>
-				<text><![CDATA[Terima Dari :]]></text>
+				<text><![CDATA[Kirim Ke      :]]></text>
 			</staticText>
 			<staticText>
 				<reportElement key="staticText-4" x="329" y="38" width="80" height="18"/>
@@ -273,28 +306,6 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{customer_custmrName}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-28" x="329" y="5" width="81" height="18"/>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement textAlignment="Right" verticalAlignment="Top"/>
-				<text><![CDATA[Ket     :]]></text>
-			</staticText>
-			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="5" width="135" height="33"/>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement verticalAlignment="Top"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_comments}+" / "+$F{goodsreceipt_ref1}]]></textFieldExpression>
-			</textField>
-			<staticText>
 				<reportElement key="staticText-5" x="329" y="73" width="80" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -303,7 +314,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Right"/>
-				<text><![CDATA[Ke Gudang   :]]></text>
+				<text><![CDATA[Dari Gudang   :]]></text>
 			</staticText>
 			<textField pattern="d/M/yyyy" isBlankWhenNull="false">
 				<reportElement key="textField" x="417" y="73" width="135" height="14"/>
