--- a/Reports/good_issue.jrxml
+++ b/Reports/good_issue.jrxml
@@ -193,7 +193,7 @@
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement verticalAlignment="Top"/>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_comments}+" / "+$F{goodsreceipt_ref1}]]></textFieldExpression>
+					<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_comments}]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement key="staticText-2" x="10" y="35" width="70" height="21"/>
@@ -204,7 +204,7 @@
 						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					</box>
 					<textElement/>
-					<text><![CDATA[Comments   :]]></text>
+					<text><![CDATA[Keterangan :]]></text>
 				</staticText>
 			</band>
 		</groupFooter>
@@ -348,6 +348,28 @@
 				</box>
 				<textElement/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_ref2}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement key="staticText-4" x="329" y="5" width="80" height="18"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Right"/>
+				<text><![CDATA[Reference :]]></text>
+			</staticText>
+			<textField pattern="d/M/yyyy" isBlankWhenNull="false">
+				<reportElement key="textField" x="416" y="5" width="135" height="33"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceipt_ref1}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
