--- a/Reports/quantity_stock_rpt_xls.jrxml
+++ b/Reports/quantity_stock_rpt_xls.jrxml
@@ -138,7 +138,7 @@
 	<detail>
 		<band height="18" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" isPrintRepeatedValues="false" x="192" y="0" width="235" height="18"/>
+				<reportElement key="textField" x="192" y="0" width="235" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -151,7 +151,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{itemName}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" isPrintRepeatedValues="false" x="120" y="0" width="72" height="18"/>
+				<reportElement key="textField" x="120" y="0" width="72" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -177,9 +177,7 @@
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{price}]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0" isBlankWhenNull="true">
-				<reportElement key="textField" x="30" y="0" width="90" height="18">
-					<printWhenExpression><![CDATA[$F{tanda}]]></printWhenExpression>
-				</reportElement>
+				<reportElement key="textField" x="30" y="0" width="90" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -189,10 +187,10 @@
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{brandcode}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{branddesc}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" isPrintRepeatedValues="false" x="0" y="0" width="30" height="18"/>
+				<reportElement key="textField" x="0" y="0" width="30" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
