--- a/Reports/good_receipt_rpt_new.jrxml
+++ b/Reports/good_receipt_rpt_new.jrxml
@@ -27,6 +27,11 @@
 	<queryString>
 		<![CDATA[CALL sp_goodsreceipt_form_rpt_new($P{docDateFr},$P{docDateTo},$P{docNumFr},$P{docNumTo},$P{optDtlCode});]]>
 	</queryString>
+	<field name="cmpnyID" class="java.lang.String"/>
+	<field name="address" class="java.lang.String"/>
+	<field name="city" class="java.lang.String"/>
+	<field name="zipCode" class="java.lang.String"/>
+	<field name="phonefax" class="java.lang.String"/>
 	<field name="Kriteria1" class="java.lang.String"/>
 	<field name="Kriteria2" class="java.lang.String"/>
 	<field name="custmrcode" class="java.lang.String"/>
@@ -42,7 +47,6 @@
 	<field name="customer_custmrName" class="java.lang.String"/>
 	<field name="address_address" class="java.lang.String"/>
 	<field name="address_dscription" class="java.lang.String"/>
-	<field name="address" class="java.lang.String"/>
 	<field name="dscription" class="java.lang.String"/>
 	<field name="brand" class="java.lang.String"/>
 	<sortField name="brand"/>
@@ -123,9 +127,9 @@
 		<band splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="38" splitType="Stretch">
+		<band height="136" splitType="Stretch">
 			<staticText>
-				<reportElement key="staticText-4" x="329" y="5" width="80" height="14"/>
+				<reportElement key="staticText-4" x="329" y="32" width="80" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -138,7 +142,7 @@
 				<text><![CDATA[No.Dokumen :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-5" x="329" y="18" width="80" height="14"/>
+				<reportElement key="staticText-5" x="329" y="45" width="80" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -151,43 +155,71 @@
 				<text><![CDATA[Tanggal   :]]></text>
 			</staticText>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="416" y="5" width="136" height="14"/>
+				<reportElement key="textField" x="416" y="32" width="136" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement>
+				<textElement textAlignment="Right">
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Kriteria2}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="18" width="135" height="14"/>
+				<reportElement key="textField" x="417" y="45" width="135" height="14"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement>
+				<textElement textAlignment="Right">
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{Kriteria1}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="0" y="5" width="329" height="27"/>
+				<reportElement key="textField" x="329" y="5" width="223" height="27"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement>
-					<font isBold="true"/>
+				<textElement textAlignment="Right">
+					<font size="12" isBold="true"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$V{head}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="5" width="291" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{cmpnyID}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="40" width="291" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{city}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="55" width="291" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{phonefax}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="25" width="291" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{address}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
