--- a/Reports/gtransfer_wms_new.jrxml
+++ b/Reports/gtransfer_wms_new.jrxml
@@ -19,11 +19,16 @@
 	<queryString>
 		<![CDATA[CALL sp_gtransfer_wms_rpt_new($P{FrwhsCode},$P{TowhsCode},$P{docdateFr},$P{docdateTo},$P{docnumFr},$P{docnumTo},$P{optDtlCode});]]>
 	</queryString>
+	<field name="cmpnyID" class="java.lang.String"/>
+	<field name="address" class="java.lang.String"/>
+	<field name="city" class="java.lang.String"/>
+	<field name="zipCode" class="java.lang.String"/>
+	<field name="phonefax" class="java.lang.String"/>
 	<field name="linenum" class="java.lang.Integer"/>
 	<field name="custmrCode" class="java.lang.String"/>
 	<field name="custmrName" class="java.lang.String"/>
 	<field name="custmrNameKu" class="java.lang.String"/>
-	<field name="addess" class="java.lang.String"/>
+	<field name="aaddess" class="java.lang.String"/>
 	<field name="docNum" class="java.lang.Integer"/>
 	<field name="docDate" class="java.sql.Date"/>
 	<field name="ref1" class="java.lang.String"/>
@@ -131,9 +136,9 @@
 		<band splitType="Stretch"/>
 	</title>
 	<pageHeader>
-		<band height="75" splitType="Stretch">
+		<band height="120" splitType="Stretch">
 			<staticText>
-				<reportElement key="staticText" x="369" y="15" width="71" height="15"/>
+				<reportElement key="staticText" x="369" y="45" width="71" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -146,7 +151,7 @@
 				<text><![CDATA[Date : ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" x="369" y="30" width="71" height="15"/>
+				<reportElement key="staticText" x="369" y="60" width="71" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -159,7 +164,7 @@
 				<text><![CDATA[Warehouse From : ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" x="369" y="0" width="71" height="15"/>
+				<reportElement key="staticText" x="369" y="30" width="71" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -172,7 +177,7 @@
 				<text><![CDATA[No.Document : ]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="440" y="15" width="115" height="15"/>
+				<reportElement key="textField" x="440" y="45" width="115" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -185,7 +190,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{docDate}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0" isBlankWhenNull="false">
-				<reportElement key="textField" x="440" y="30" width="115" height="15"/>
+				<reportElement key="textField" x="440" y="60" width="115" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -198,7 +203,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{wfrm_desc}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0" isBlankWhenNull="false">
-				<reportElement key="textField" x="440" y="0" width="115" height="15"/>
+				<reportElement key="textField" x="440" y="30" width="115" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -211,7 +216,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{docNum}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0" isBlankWhenNull="true">
-				<reportElement key="textField" x="81" y="60" width="288" height="15"/>
+				<reportElement key="textField" x="81" y="105" width="288" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -221,10 +226,10 @@
 				<textElement verticalAlignment="Middle">
 					<font size="8" isBold="false"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{addess}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{aaddess}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0" isBlankWhenNull="false">
-				<reportElement key="textField" x="81" y="30" width="71" height="15"/>
+				<reportElement key="textField" x="81" y="75" width="71" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -237,7 +242,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{ref1}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText" x="0" y="30" width="81" height="15"/>
+				<reportElement key="staticText" x="0" y="75" width="81" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -250,7 +255,7 @@
 				<text><![CDATA[PIC : ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText" x="0" y="45" width="81" height="15"/>
+				<reportElement key="staticText" x="0" y="90" width="81" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -263,7 +268,7 @@
 				<text><![CDATA[Customer : ]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement key="textField" x="81" y="45" width="288" height="15"/>
+				<reportElement key="textField" x="81" y="90" width="288" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -276,20 +281,20 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{custmrNameKu}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText" x="0" y="0" width="152" height="30"/>
+				<reportElement key="staticText" x="369" y="0" width="186" height="30"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[GOODS TRANSFER]]></text>
 			</staticText>
 			<textField pattern="#,##0" isBlankWhenNull="false">
-				<reportElement key="textField" x="440" y="45" width="115" height="15"/>
+				<reportElement key="textField" x="440" y="75" width="115" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -302,7 +307,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{wto_desc}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText" x="369" y="45" width="71" height="15"/>
+				<reportElement key="staticText" x="369" y="75" width="71" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -314,6 +319,34 @@
 				</textElement>
 				<text><![CDATA[Warehouse To : ]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="1" y="20" width="291" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{address}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="1" y="50" width="291" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{phonefax}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="1" y="35" width="291" height="15"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{city}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="1" y="0" width="291" height="20"/>
+				<textElement verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{cmpnyID}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
