--- a/Reports/quantity_stock_rpt.jrxml
+++ b/Reports/quantity_stock_rpt.jrxml
@@ -27,6 +27,7 @@
 	<field name="itemName" class="java.lang.String"/>
 	<field name="brandgab" class="java.lang.String"/>
 	<field name="pricecode" class="java.lang.String"/>
+	<field name="pricename" class="java.lang.String"/>
 	<field name="price" class="java.lang.Double"/>
 	<field name="adakey" class="java.lang.String"/>
 	<variable name="no" class="java.lang.Integer" resetType="Group" resetGroup="BrandCode" calculation="DistinctCount">
@@ -47,6 +48,7 @@
 	<variable name="GTotStock" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{price}]]></variableExpression>
 	</variable>
+	<filterExpression><![CDATA[$F{price}!=0]]></filterExpression>
 	<group name="BrandCode">
 		<groupExpression><![CDATA[$F{brandcode}]]></groupExpression>
 		<groupHeader>
@@ -55,7 +57,7 @@
 		<groupFooter>
 			<band height="24" splitType="Stretch">
 				<staticText>
-					<reportElement key="staticText-12" x="120" y="6" width="252" height="18"/>
+					<reportElement key="staticText-12" x="120" y="6" width="292" height="18"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -80,7 +82,7 @@
 					</graphicElement>
 				</line>
 				<textField pattern="###0" isBlankWhenNull="false">
-					<reportElement key="textField" x="428" y="6" width="55" height="18"/>
+					<reportElement key="textField" x="412" y="6" width="85" height="18"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -93,7 +95,7 @@
 					<textFieldExpression class="java.lang.Double"><![CDATA[$V{SubTotUnt}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0" isBlankWhenNull="false">
-					<reportElement key="textField" x="483" y="6" width="68" height="18"/>
+					<reportElement key="textField" x="497" y="6" width="54" height="18"/>
 					<box>
 						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -156,7 +158,7 @@
 				<text><![CDATA[Kd. Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-8" x="192" y="7" width="235" height="15"/>
+				<reportElement key="staticText-8" x="192" y="7" width="220" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -178,7 +180,7 @@
 				<text><![CDATA[Brand]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-10" x="483" y="7" width="68" height="15"/>
+				<reportElement key="staticText-10" x="497" y="7" width="54" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -201,7 +203,7 @@
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement key="staticText-10" x="427" y="7" width="56" height="15"/>
+				<reportElement key="staticText-10" x="412" y="7" width="85" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -209,14 +211,14 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Right"/>
-				<text><![CDATA[WhsCode]]></text>
+				<text><![CDATA[Warehouse]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="18" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" isPrintRepeatedValues="false" x="192" y="0" width="235" height="18"/>
+				<reportElement key="textField" isPrintRepeatedValues="false" x="192" y="0" width="220" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -242,7 +244,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{itemCode}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0" isBlankWhenNull="false">
-				<reportElement key="textField" x="483" y="0" width="68" height="18"/>
+				<reportElement key="textField" x="497" y="0" width="54" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -283,7 +285,7 @@
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{no}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0" isBlankWhenNull="false">
-				<reportElement key="textField" x="427" y="0" width="56" height="18"/>
+				<reportElement key="textField" x="412" y="0" width="85" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -293,7 +295,7 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{pricecode}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{pricename}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -355,7 +357,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{auditUser}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-27" x="483" y="11" width="69" height="12"/>
+				<reportElement key="staticText-27" x="497" y="11" width="55" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -424,7 +426,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{auditUser}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-26" x="483" y="12" width="69" height="12"/>
+				<reportElement key="staticText-26" x="497" y="12" width="55" height="12"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -442,7 +444,7 @@
 		<band height="22" splitType="Stretch">
 			<printWhenExpression><![CDATA[( $P{optDtlCode}.equals( "" ) ? true : false )]]></printWhenExpression>
 			<textField pattern="###0" isBlankWhenNull="false">
-				<reportElement key="textField" x="427" y="2" width="56" height="18"/>
+				<reportElement key="textField" x="412" y="2" width="85" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -474,7 +476,7 @@
 				</graphicElement>
 			</line>
 			<textField pattern="###0" isBlankWhenNull="false">
-				<reportElement key="textField" x="483" y="2" width="68" height="18"/>
+				<reportElement key="textField" x="497" y="2" width="54" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
