--- a/Reports/good_issue_rpt_new_xls.jrxml
+++ b/Reports/good_issue_rpt_new_xls.jrxml
@@ -27,14 +27,20 @@
 	<queryString>
 		<![CDATA[CALL sp_goodsissue_form_rpt_new($P{docDateFr},$P{docDateTo},$P{docNumFr},$P{docNumTo},$P{optDtlCode});]]>
 	</queryString>
+	<field name="cmpnyID" class="java.lang.String"/>
+	<field name="address" class="java.lang.String"/>
+	<field name="city" class="java.lang.String"/>
+	<field name="zipCode" class="java.lang.String"/>
+	<field name="phonefax" class="java.lang.String"/>
 	<field name="Kriteria1" class="java.lang.String"/>
 	<field name="Kriteria2" class="java.lang.String"/>
 	<field name="custmrcode" class="java.lang.String"/>
 	<field name="tglQ" class="java.lang.String"/>
+	<field name="goodsreceiptdetail1_whsCode" class="java.lang.String"/>
 	<field name="goodsreceiptdetail1_itemCode" class="java.lang.String"/>
-	<field name="goodsreceiptdetail1_quantity" class="java.lang.Double"/>
+	<field name="goodsreceiptdetail1_quantity" class="java.math.BigDecimal"/>
 	<field name="goodsreceiptdetail1_price" class="java.math.BigDecimal"/>
-	<field name="goodsreceiptdetail1_lineTotal" class="java.lang.Double"/>
+	<field name="goodsreceiptdetail1_lineTotal" class="java.math.BigDecimal"/>
 	<field name="item_dscription" class="java.lang.String"/>
 	<field name="goodsreceipt_custmrCode" class="java.lang.String"/>
 	<field name="goodsreceipt_shipToCode" class="java.lang.String"/>
@@ -42,12 +48,12 @@
 	<field name="customer_custmrName" class="java.lang.String"/>
 	<field name="address_address" class="java.lang.String"/>
 	<field name="address_dscription" class="java.lang.String"/>
-	<field name="address" class="java.lang.String"/>
 	<field name="dscription" class="java.lang.String"/>
 	<field name="brand" class="java.lang.String"/>
 	<sortField name="brand"/>
 	<sortField name="goodsreceiptdetail1_itemCode"/>
 	<sortField name="custmrcode"/>
+	<sortField name="goodsreceiptdetail1_whsCode"/>
 	<variable name="no" class="java.lang.Integer" resetType="Group" resetGroup="Docnum" calculation="Count">
 		<variableExpression><![CDATA[]]></variableExpression>
 	</variable>
@@ -103,7 +109,7 @@
 				<text><![CDATA[No.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-7" x="244" y="7" width="72" height="15"/>
+				<reportElement key="staticText-7" x="233" y="7" width="72" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -116,7 +122,7 @@
 				<text><![CDATA[Kd. Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-8" x="316" y="7" width="180" height="15"/>
+				<reportElement key="staticText-8" x="305" y="7" width="134" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -129,7 +135,7 @@
 				<text><![CDATA[Nama Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-9" x="154" y="7" width="90" height="15"/>
+				<reportElement key="staticText-9" x="142" y="7" width="91" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -155,7 +161,7 @@
 				<text><![CDATA[Jumlah]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-9" x="30" y="7" width="124" height="15"/>
+				<reportElement key="staticText-9" x="30" y="7" width="112" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -167,12 +173,25 @@
 				</textElement>
 				<text><![CDATA[Supplier]]></text>
 			</staticText>
+			<staticText>
+				<reportElement key="staticText-9" x="439" y="7" width="57" height="15"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[WhsCode]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="18" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="316" y="0" width="180" height="18"/>
+				<reportElement key="textField" x="305" y="0" width="134" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -185,7 +204,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{item_dscription}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="244" y="0" width="72" height="18"/>
+				<reportElement key="textField" x="233" y="0" width="72" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -198,7 +217,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["P:"+$F{goodsreceiptdetail1_itemCode}]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0" isBlankWhenNull="false">
-				<reportElement key="textField" x="154" y="0" width="90" height="18"/>
+				<reportElement key="textField" x="142" y="0" width="91" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -237,7 +256,7 @@
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{goodsreceiptdetail1_quantity}]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0" isBlankWhenNull="false">
-				<reportElement key="textField" x="30" y="0" width="124" height="18"/>
+				<reportElement key="textField" x="30" y="0" width="112" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -248,6 +267,19 @@
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{customer_custmrName}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="false">
+				<reportElement key="textField" x="439" y="0" width="57" height="18"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[":"+$F{goodsreceiptdetail1_whsCode}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
