--- a/Reports/good_receipt_rpt_new.jrxml
+++ b/Reports/good_receipt_rpt_new.jrxml
@@ -52,6 +52,8 @@
 	<field name="brand" class="java.lang.String"/>
 	<sortField name="brand"/>
 	<sortField name="goodsreceiptdetail1_itemCode"/>
+	<sortField name="custmrcode"/>
+	<sortField name="goodsreceiptdetail1_whsCode"/>
 	<variable name="no" class="java.lang.Integer" resetType="Group" resetGroup="Docnum" calculation="Count">
 		<variableExpression><![CDATA[]]></variableExpression>
 	</variable>
@@ -249,7 +251,7 @@
 				<text><![CDATA[Kd. Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-8" x="283" y="6" width="175" height="15"/>
+				<reportElement key="staticText-8" x="283" y="7" width="175" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -305,7 +307,7 @@
 				<text><![CDATA[Supplier]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-9" x="458" y="7" width="39" height="15"/>
+				<reportElement key="staticText-10" x="458" y="7" width="39" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -319,6 +321,32 @@
 	</columnHeader>
 	<detail>
 		<band height="18" splitType="Stretch">
+			<textField isBlankWhenNull="false">
+				<reportElement key="textField" x="283" y="0" width="175" height="18"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{item_dscription}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="false">
+				<reportElement key="textField" x="211" y="0" width="72" height="18"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceiptdetail1_itemCode}]]></textFieldExpression>
+			</textField>
 			<textField pattern="###0" isBlankWhenNull="false">
 				<reportElement key="textField" x="136" y="0" width="75" height="18"/>
 				<box>
@@ -372,33 +400,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{customer_custmrName}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="211" y="0" width="72" height="18"/>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement verticalAlignment="Middle">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{goodsreceiptdetail1_itemCode}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="283" y="0" width="175" height="18"/>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement verticalAlignment="Middle">
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{item_dscription}]]></textFieldExpression>
-			</textField>
-			<textField pattern="###0" isBlankWhenNull="false">
-				<reportElement key="textField" x="458" y="0" width="38" height="18"/>
+				<reportElement key="textField" x="458" y="0" width="39" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -569,7 +571,7 @@
 				<textFieldExpression class="java.lang.Double"><![CDATA[$V{GTotUnt}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement key="staticText-12" x="221" y="1" width="72" height="18"/>
+				<reportElement key="staticText-12" x="208" y="2" width="72" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
