--- a/Reports/quantity_stock_rpt.jrxml
+++ b/Reports/quantity_stock_rpt.jrxml
@@ -55,7 +55,7 @@
 	<variable name="GTotStock" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{price}]]></variableExpression>
 	</variable>
-	<!--<filterExpression><![CDATA[$F{price}!=new Double(0)]]></filterExpression>-->
+	<filterExpression><![CDATA[$F{price}!=0]]></filterExpression>
 	<group name="BrandCode">
 		<groupExpression><![CDATA[$F{brandcode}]]></groupExpression>
 		<groupHeader>
@@ -477,7 +477,7 @@
 	</lastPageFooter>
 	<summary>
 		<band height="22" splitType="Stretch">
-			<!--<printWhenExpression><![CDATA[( $P{optDtlCode}.equals( "" ) ? true : false )]]></printWhenExpression>-->
+			<printWhenExpression><![CDATA[( $P{optDtlCode}.equals( "" ) ? true : false )]]></printWhenExpression>
 			<textField pattern="###0" isBlankWhenNull="false">
 				<reportElement key="textField" x="412" y="2" width="85" height="18"/>
 				<box>
